# OpenVO

./: CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  main.dox
src/: CMakeLists.txt  main.cxx
src/openvo/: Tracker.hpp
